# waveql

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE.txt  README.md  flake.nix
.github/workflows/: ci.yml
examples/: demo.sh
skill/: README.md  SKILL.md  install_prompt.txt
src/: error.rs  evaluator.rs  fst_impl.rs  lib.rs  loader.rs  main.rs  query.rs  vcd_impl.rs
src/backend/: capabilities.rs  metadata.rs  mod.rs  types.rs
src/events/: mod.rs
src/index/: mod.rs
src/output/: json.rs  mod.rs  table.rs  text.rs
src/planner/: mod.rs
src/protocol/: mod.rs  spi.rs  valid_ready.rs
src/report/: mod.rs
src/trace/: mod.rs
tests/: integration_test.rs
